WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270247
[WGSL] shader,validation,parse,must_use:* is failing
https://bugs.webkit.org/show_bug.cgi?id=270247
Summary
[WGSL] shader,validation,parse,must_use:* is failing
Tadeu Zagallo
Reported
2024-02-28 13:44:56 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-28 13:45:12 PST
<
rdar://problem/123784798
>
Tadeu Zagallo
Comment 2
2024-02-28 13:53:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25251
EWS
Comment 3
2024-02-29 05:12:24 PST
Committed
275489@main
(d428a6a8c543): <
https://commits.webkit.org/275489@main
> Reviewed commits have been landed. Closing PR #25251 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug