[WGSL] shader,validation,parse,must_use:* is failing https://bugs.webkit.org/show_bug.cgi?id=270247 rdar://123784798

Reviewed by Mike Wyrzykowski.

We handle the general case for must_use in builtins, but struct constructors
and bitcast needed to be handled separately.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/parse/must_use-expected.txt: Added.
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::bitcast):

Canonical link: https://commits.webkit.org/275489@main